[build-system]
requires = [
    "setuptools<=65.7.0", 
    "setuptools_scm[toml]>=6.2", 
    "babel",
    "build==0.10.0",
    "wheel",
    "twine"
]
build-backend = "setuptools.build_meta"

[project]
name = "nomstr"

authors = [
  { name="k9ert"},
]

description = "Managing loads of bookmarks"

dynamic = ["dependencies", "version"]

[tool.setuptools_scm]
write_to = "nomstr/_version.py"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}

test = [
    "black<=23.0.0",
    "pre-commit==2.19.0",
    "pytest"
]